--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ POSTGRES_PASSWORD=123456
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 SINATRA_PORT=3000
+GRAFANA_USER=admin
+GRAFANA_PASSWORD=senhadaboa
