--- a/k8s/default/nginx-deployment.yaml
+++ b/k8s/default/nginx-deployment.yaml
@@ -16,4 +16,11 @@ spec:
       - name: nginx
         image: nginx:latest
         ports:
-        - containerPort: 80
+        - containerPort: 3001
+        volumeMounts:
+        - name: nginx-config
+          mountPath: /etc/nginx/conf.d
+      volumes:
+      - name: nginx-config
+        configMap:
+          name: abiscoitado-nginx-config
