--- a/k8s/default/nginx-service.yaml
+++ b/k8s/default/nginx-service.yaml
@@ -7,6 +7,6 @@ spec:
     app: abiscoitado-nginx
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 80
-  type: LoadBalancer
+    port: 8080
+    targetPort: 3001
+  # type: LoadBalancer
